Added open in colab link

--- a/environment_test.ipynb
+++ b/environment_test.ipynb
@@ -8,6 +8,10 @@
     "\n",
     "We recommend using either [Google Colab](https://colab.research.google.com/) or to use a local Python 3.10 environment.\n",
     "\n",
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/bettercodepaul/data2day_2023_polars/raw/main/environment_test.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>\n",
+    "\n",
     "You can check the exact library dependencies in the [requirements.txt](https://github.com/bettercodepaul/data2day_2023_polars/raw/main/requirements.txt)"
    ]
   },
