Success message for reading CSV file

--- a/environment_test.ipynb
+++ b/environment_test.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "We recommend using either [Google Colab](https://colab.research.google.com/) or to use a local Python 3.10 environment.\n",
     "\n",
-    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/bettercodepaul/data2day_2023_polars/raw/main/environment_test.ipynb\">\n",
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/bettercodepaul/data2day_2023_polars/blob/main/environment_test.ipynb\">\n",
     "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
     "</a>\n",
     "\n",
@@ -46,7 +46,7 @@
    "source": [
     "# install libraries\n",
     "# don't forget that you might need to restart the runtime after installing packages\n",
-    "!pip install -qr requirements.txt"
+    "!pip install -r requirements.txt"
    ]
   },
   {
@@ -102,7 +102,11 @@
    "source": [
     "# check if polars can read the downloaded CSV file\n",
     "df = pl.read_csv(\"spotify-charts-2017-2021-global-top200.csv.gz\")\n",
-    "assert df.shape == (362_182, 9)"
+    "expected_shape = (362_182, 9)\n",
+    "if df.shape == expected_shape:\n",
+    "    print(f\"✅ The CSV file was read as expected!\")\n",
+    "else:\n",
+    "    print(f\"⚠️ The CSV file ({df.shape}) was not read as expected ({expected_shape})\")"
    ]
   },
   {
