--- a/environment_test.ipynb
+++ b/environment_test.ipynb
@@ -4,15 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Install libraries\n",
+    "# data2day 2023 Praxisworkshop Polars: Der Turbo Boost für Dataframes\n",
     "\n",
-    "We recommend using either [Google Colab](https://colab.research.google.com/) or to use a local Python 3.10 environment.\n",
+    "Bitte führe dieses Notebook einmalig aus, um zu prüfen, ob für dich alles funktioniert. Wir empfehlen [Google Colab](https://colab.research.google.com/) zu nutzen.\n",
     "\n",
     "<a target=\"_blank\" href=\"https://colab.research.google.com/github/bettercodepaul/data2day_2023_polars/blob/main/environment_test.ipynb\">\n",
     "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
     "</a>\n",
     "\n",
-    "You can check the exact library dependencies in the [requirements.txt](https://github.com/bettercodepaul/data2day_2023_polars/raw/main/requirements.txt)"
+    "Code und Daten für den Workshop werden in dieseem [GitHub repository](https://github.com/bettercodepaul/data2day_2023_polars/) abgelegt.\n",
+    "\n",
+    "Alternativ zu Google Colab kannst du auch eine lokale Python 3.10 Umgebung mit Jupyter/JupyterLab nutzen. Du kannst die genauen Anforderungen in der [requirements.txt](https://github.com/bettercodepaul/data2day_2023_polars/raw/main/requirements.txt) nachlesen. Dann musst du ggf. die Notebooks während des Workshops für deine Umgebung anpassen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bibliotheken installieren"
    ]
   },
   {
@@ -91,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reading some data"
+    "# Eine lokale CSV-Datei mit Polars einlesen"
    ]
   },
   {
@@ -110,11 +119,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Wenn bis hier nur ✅ zu sehen waren und keine Fehlermeldungen aufgetaucht sind, ist alles in Ordnung. Wir freuen uns auf den Workshop mit dir."
+   ]
   }
  ],
  "metadata": {
