--- a/environment_test.ipynb
+++ b/environment_test.ipynb
@@ -12,7 +12,7 @@
     "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
     "</a>\n",
     "\n",
-    "Code und Daten für den Workshop werden in dieseem [GitHub repository](https://github.com/bettercodepaul/data2day_2023_polars/) abgelegt.\n",
+    "Code und Daten für den Workshop werden in diesem [GitHub repository](https://github.com/bettercodepaul/data2day_2023_polars/) abgelegt.\n",
     "\n",
     "Alternativ zu Google Colab kannst du auch eine lokale Python 3.10 Umgebung mit Jupyter/JupyterLab nutzen. Du kannst die genauen Anforderungen in der [requirements.txt](https://github.com/bettercodepaul/data2day_2023_polars/raw/main/requirements.txt) nachlesen. Dann musst du ggf. die Notebooks während des Workshops für deine Umgebung anpassen."
    ]
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# download requirements and data\n",
+    "# download requirements.txt and some test data\n",
     "urllib.request.urlretrieve(REQUIREMENTS_URL, os.path.basename(REQUIREMENTS_URL))\n",
     "urllib.request.urlretrieve(DATA_URL, os.path.basename(DATA_URL))"
    ]
