--- a/environment_test.ipynb
+++ b/environment_test.ipynb
@@ -6,13 +6,13 @@
    "source": [
     "# data2day 2023 Praxisworkshop Polars: Der Turbo Boost für Dataframes\n",
     "\n",
-    "Bitte führe dieses Notebook einmalig aus, um zu prüfen, ob für dich alles funktioniert. Wir empfehlen [Google Colab](https://colab.research.google.com/) zu nutzen.\n",
+    "Bitte führe dieses Notebook einmalig aus, um zu prüfen, ob für dich alles funktioniert. Wir empfehlen [Google Colab](https://colab.research.google.com/) zu nutzen, wofür du einen (ggf. temporären) Google-Account benötigst.\n",
     "\n",
     "<a target=\"_blank\" href=\"https://colab.research.google.com/github/bettercodepaul/data2day_2023_polars/blob/main/environment_test.ipynb\">\n",
     "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
     "</a>\n",
     "\n",
-    "Code und Daten für den Workshop werden in diesem [GitHub repository](https://github.com/bettercodepaul/data2day_2023_polars/) abgelegt.\n",
+    "Code und Daten werden wir am Workshop-Tag in diesem [GitHub repository](https://github.com/bettercodepaul/data2day_2023_polars/) bereitstellen.\n",
     "\n",
     "Alternativ zu Google Colab kannst du auch eine lokale Python 3.10 Umgebung mit Jupyter/JupyterLab nutzen. Du kannst die genauen Anforderungen in der [requirements.txt](https://github.com/bettercodepaul/data2day_2023_polars/raw/main/requirements.txt) nachlesen. Dann musst du ggf. die Notebooks während des Workshops für deine Umgebung anpassen."
    ]
@@ -122,7 +122,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wenn bis hier nur ✅ zu sehen waren und keine Fehlermeldungen aufgetaucht sind, ist alles in Ordnung. Wir freuen uns auf den Workshop mit dir."
+    "Wenn bis hier nur ✅ zu sehen waren und keine Fehlermeldungen aufgetaucht sind, ist alles in Ordnung. Wir freuen uns auf den Workshop mit dir.\n",
+    "\n",
+    "🎶 🎹 🎸 🎷 🥁 🎤\n",
+    "\n",
+    "🎧 Damit du beim Workshop auch den ein oder anderen Song aus den Charts, die wir analysieren werden, anhören kannst, empfehlen wir dir, Kopfhörer mitzubringen."
    ]
   }
  ],
