Added pyarrow dependency

--- a/environment_test.ipynb
+++ b/environment_test.ipynb
@@ -68,6 +68,7 @@
     "import plotly\n",
     "import plotly.express as px\n",
     "import pandas as pd\n",
+    "import pyarrow\n",
     "import platform"
    ]
   },
@@ -93,7 +94,8 @@
     "check_package_version(\"python\", platform.python_version()[0:4], \"3.10\")\n",
     "check_package_version(\"polars\", pl.__version__, \"0.19.3\")\n",
     "check_package_version(\"plotly\", plotly.__version__, \"5.15.0\")\n",
-    "check_package_version(\"pandas\", pd.__version__, \"1.5.3\")"
+    "check_package_version(\"pandas\", pd.__version__, \"1.5.3\")\n",
+    "check_package_version(\"pyarrow\", pyarrow.__version__, \"9.0.0\")"
    ]
   },
   {
