Update für Teil 2 mit Selektoren

--- a/data2day_2023_Polars_Teil_2.ipynb
+++ b/data2day_2023_Polars_Teil_2.ipynb
@@ -1085,17 +1085,105 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Selektoren"
+        "## Selektoren + horizontale Ausdrücke"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "TODO\n",
+        "Besonders für Daten im \"wide\" Format ist es oft hilfreich Operationen auf mehreren Spalten auszuführen, ohne die Spaltennamen konkret angeben zu müssen. Es kann sogar sein, dass die Spaltennamen manchmal bei der Erstellung einer Abfrage noch gar nicht bekannt sind, weil sie erst aus den konkreten Daten entstehen.\n",
         "\n",
-        "pl.all().exclude() etc.\n",
-        "pl.sum_horizontal(), min_horizontal, etc."
+        "Bisher haben wir immer einen einzigen Spaltennamen an `pl.col` übergeben, es gibt aber noch mehr Möglichkeiten:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# mehrere Spalten mit einem Namen selektieren\n",
+        "df.select(pl.col(\"rank\", \"streams\").log()).head(2)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# mehrere Spalten mit einem Datentyp selektieren\n",
+        "df.select(pl.col(pl.Utf8).str.to_lowercase()).head(2)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# mehrere Spalten mit einem regulären Ausdruck selektieren\n",
+        "df.select(pl.col(\"^.*rt.*$\")).head(2)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Zusätzlich gibt es auch die Möglichkeit alle Spalten zu selektieren."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df.select(pl.all()).head(2)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Oder auch bestimmte Spalten auszuschließen."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# alle Spalten, aber nicht \"url\"\n",
+        "df.select(pl.exclude(\"url\")).head(2)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# alle Utf8-Spalten, aber nicht \"url\"\n",
+        "df.select(pl.col(pl.Utf8).exclude(\"url\")).head(2)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Auf so einer Spaltenselektion, die mehr als eine Spalte beinhaltet, können wir auch \"horizontale\" Berechnungen durchführen. Dafür gibt es die Methoden `pl.horizontal_sum`, `pl.horizontal_min` und `pl.horizontal_max`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df.select(pl.sum_horizontal(pl.exclude(pl.Utf8))).head(2)"
       ]
     },
     {
@@ -1137,6 +1225,49 @@
       "outputs": [],
       "source": [
         "q19.check(q19_df)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Frage 20"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "q20.question()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "q12.solution()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "q20_df = ..."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "q20.check(df, q20_df)"
       ]
     }
   ],
