--- a/data2day_2023_Polars_Teil_1.ipynb
+++ b/data2day_2023_Polars_Teil_1.ipynb
@@ -808,7 +808,7 @@
       "source": [
         "# Dann gibt es immer eine Zelle mit einem Hinweis in welche Variablen die Lösung geschrieben werden sollte.\n",
         "# Lege gerne weitere Zellen an, um deine Lösung genauer inspizieren zu können.\n",
-        "coole_firma = ..."
+        "coole_firma = \"BettercallPaul\""
       ]
     },
     {
@@ -870,7 +870,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "q1_df = ..."
+        "q1_df = df.select(\"date\", \"rank\", \"title\", \"artist\")"
       ]
     },
     {
@@ -1172,6 +1172,22 @@
       "source": [
         "print(f'Anzahl aller Streams mit Int64 ist {df.select(pl.col(\"streams\").sum()).item()}')\n",
         "print(f'Anzahl aller Streams mit Int32 ist {df.select(pl.col(\"streams\").cast(pl.Int32).sum()).item()}')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Mit der Methode `shrink_dtype` lässt sich der Speicherverbrauch ein Stück weit auch automatisiert verringern. Dabei wird aber nie von \"signed\" zu \"unsigned\" Datentypen gewechselt, auch wenn keine negativen Daten vorhanden sind."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df.select(pl.col(\"rank\").shrink_dtype()).head(2)"
       ]
     },
     {
