--- a/data2day_2023_Polars_Teil_2.ipynb
+++ b/data2day_2023_Polars_Teil_2.ipynb
@@ -154,7 +154,7 @@
       "outputs": [],
       "source": [
         "# Daten aus CSV-Datei einlesen und Datums-Spalten parsen\n",
-        "df = pl.read_csv(LOCAL_DATA_FILE_NAME, try_parse_dates=True)\n",
+        "df = pl.read_csv(\"spotify-charts-2017-2021-global-top200.csv.gz\", try_parse_dates=True)\n",
         "df.head(2) # die ersten 2 Zeilen ausgeben"
       ]
     },
@@ -892,30 +892,14 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "q18.check(0.519)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "(df\n",
-        "    .join(pl.read_parquet(\"track-genres.parquet\"), on=\"url\")\n",
-        "    .explode(\"genre\")\n",
-        "    .group_by(\"genre\")\n",
-        "    .agg(pl.col(\"streams\").sum())\n",
-        "    .top_k(5, by=\"streams\")\n",
-        "    #.filter(pl.col(\"genre\").is_in([\"\"]))\n",
-        ")"
+        "q18.check(q18_df)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Gruppieren und Joinen mit Ausdrücken: `over`-Expressions"
+        "## Gruppieren und Joinen mit Ausdrücken: `over`-Expressions"
       ]
     },
     {
@@ -958,6 +942,7 @@
         "    .sort(\"streams\", descending=True)\n",
         "    .group_by(\"year\")\n",
         "    .head(1)\n",
+        "    .sort(\"year\")\n",
         ")"
       ]
     },
@@ -985,6 +970,7 @@
         "    .sort(\"streams\", descending=True)\n",
         "    .group_by(\"year\")\n",
         "    .head(1)\n",
+        "    .sort(\"year\")\n",
         ")"
       ]
     },
@@ -992,8 +978,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Reshaping\n",
-        "\n"
+        "## Reshaping"
       ]
     },
     {
@@ -1078,6 +1063,27 @@
         "    .pivot(values=\"streams\", columns=\"genre\", index=\"month\")\n",
         "    .melt(id_vars=\"month\", value_name=\"streams\", value_vars=[\"pop\", \"rock\", \"hip-hop\"], variable_name=\"genre\")\n",
         "    .sort(\"month\")\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Die `null` Werte könnten wir mit `drop_nulls` entfernen."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "(some_df\n",
+        "    .pivot(values=\"streams\", columns=\"genre\", index=\"month\")\n",
+        "    .melt(id_vars=\"month\", value_name=\"streams\", value_vars=[\"pop\", \"rock\", \"hip-hop\"], variable_name=\"genre\")\n",
+        "    .sort(\"month\")\n",
+        "    .drop_nulls()\n",
         ")"
       ]
     },
