--- a/data2day_2023_Polars_Teil_2.ipynb
+++ b/data2day_2023_Polars_Teil_2.ipynb
@@ -111,10 +111,13 @@
       },
       "outputs": [],
       "source": [
-        "# CSV Daten herunterladen\n",
+        "# Daten herunterladen\n",
         "DATA_URL = \"https://github.com/bettercodepaul/data2day_2023_polars/raw/main/spotify-charts-2017-2021-global-top200.csv.gz\"\n",
         "LOCAL_DATA_FILE_NAME = os.path.basename(DATA_URL)\n",
-        "urllib.request.urlretrieve(DATA_URL, LOCAL_DATA_FILE_NAME)"
+        "urllib.request.urlretrieve(DATA_URL, LOCAL_DATA_FILE_NAME)\n",
+        "GENRES_DATA_URL = \"https://github.com/bettercodepaul/data2day_2023_polars/raw/main/track-genres.parquet\"\n",
+        "LOCAL_GENRES_DATA_FILE_NAME = os.path.basename(GENRES_DATA_URL)\n",
+        "urllib.request.urlretrieve(GENRES_DATA_URL, LOCAL_GENRES_DATA_FILE_NAME)"
       ]
     },
     {
