--- a/data2day_2023_Polars_Teil_3.ipynb
+++ b/data2day_2023_Polars_Teil_3.ipynb
@@ -166,6 +166,90 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "## When.Then.Otherwise\n",
+        "\n",
+        "Manchmal wollt ihr einen Ausdruck in bestimmten Fällen so und in anderen Fällen so berechnen.\n",
+        "\n",
+        "Dafür gibt es die Methoden `when.then.otherwise`, die einem `if.then.else` entsprechen."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df = pl.read_csv(\"spotify-charts-2017-2021-global-top200.csv.gz\", try_parse_dates=True)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Das funktioniert dann so:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "(df\n",
+        "    .with_columns(\n",
+        "        pl.when(pl.col(\"date\").dt.day().eq(14) & pl.col(\"date\").dt.month().eq(2))\n",
+        "        .then(pl.col(\"streams\"))\n",
+        "        .otherwise(pl.lit(0))\n",
+        "        .alias(\"valentinesStreams\")\n",
+        "    )\n",
+        "    .filter(pl.col(\"title\").eq(\"Starboy\") & pl.col(\"date\").dt.week().eq(7))\n",
+        "    .select(\"date\", \"streams\", \"valentinesStreams\")\n",
+        "    .head(5)\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Wir könnten auch die Trend-Spalte selber nachstellen:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "(df\n",
+        "    .join(\n",
+        "        # Position vom Vortag ermitteln\n",
+        "        df.select(\"url\", pl.col(\"date\").dt.offset_by(\"1d\"), pl.col(\"rank\").alias(\"previous_rank\")),\n",
+        "        how=\"left\",\n",
+        "        on=[\"url\", \"date\"]\n",
+        "    )\n",
+        "    .with_columns(\n",
+        "        pl.when(pl.col(\"rank\").lt(pl.col(\"previous_rank\")))\n",
+        "        .then(pl.lit(\"MOVE_UP\"))\n",
+        "        .otherwise(\n",
+        "            pl.when(pl.col(\"rank\").gt(pl.col(\"previous_rank\")))\n",
+        "            .then(pl.lit(\"MOVE_DOWN\"))\n",
+        "            .otherwise(\n",
+        "                pl.when(pl.col(\"rank\").eq(pl.col(\"previous_rank\")))\n",
+        "                .then(pl.lit(\"SAME_POSITION\"))\n",
+        "                .otherwise(pl.lit(\"NEW_ENTRY\"))\n",
+        "            )\n",
+        "        ).alias(\"myTrend\")\n",
+        "    )\n",
+        "    .select(\"title\", \"artist\", \"date\", \"trend\", \"myTrend\")\n",
+        "    .sample(10)\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## Custom Expressions"
       ]
     },
@@ -190,12 +274,100 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Eine elegantere Art & Weise zu modularem Code zu kommen, sind eigene Methoden, die neue Expressions erstellen und z.B. mit der `pipe` Methode aufgerufen werden können.\n",
+        "\n",
+        "Hier ein Beispiel für die Methode `sum` für die es in Polars keinen `min_count` Parameter gibt (den es aber in Pandas gibt). Der `min_count` Parameter bestimmt, wie viele Werte mindestens vorhanden sein müssen, damit die Summe gebildet wird."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "\n"
+        "def sum(expr: pl.Expr, min_count=0) -> pl.Expr:\n",
+        "    if min_count > 0:\n",
+        "        return pl.when(\n",
+        "            expr.is_not_null().sum().ge(pl.lit(min_count))\n",
+        "        ).then(expr.sum())\n",
+        "    else:\n",
+        "        return expr.sum()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "pl.DataFrame({\n",
+        "    \"value\": [42, 43, None], \n",
+        "}).select(\n",
+        "    pl.col(\"value\").pipe(sum, min_count=2).alias(\"min_count=2\"),\n",
+        "    pl.col(\"value\").pipe(sum, min_count=3).alias(\"min_count=3\")\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Wir können solche Methoden auch in einem eigenen Namespace registrieren."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "@pl.api.register_expr_namespace(\"special\")\n",
+        "class Special:\n",
+        "    def __init__(self, expr: pl.Expr):\n",
+        "        self._expr = expr\n",
+        "\n",
+        "    def sum(self, min_count=0) -> pl.Expr:\n",
+        "        if min_count > 0:\n",
+        "            return pl.when(\n",
+        "                self._expr.is_not_null().sum().ge(pl.lit(min_count))\n",
+        "            ).then(self._expr.sum())\n",
+        "        else:\n",
+        "            return self._expr.sum()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Jetzt können wir die Methode innerhalb des eigenen Namespace \"special\" aufrufen."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "pl.DataFrame({\n",
+        "    \"value\": [42, 43, None], \n",
+        "}).select(\n",
+        "    pl.col(\"value\").special.sum(min_count=2).alias(\"min_count=2\"),\n",
+        "    pl.col(\"value\").special.sum(min_count=3).alias(\"min_count=3\")\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Weiterführende Informationen gibt es hier:\n",
+        "\n",
+        "- [Expr.pipe](https://pola-rs.github.io/polars/py-polars/html/reference/expressions/api/polars.Expr.pipe.html)\n",
+        "- [DataFrame.pipe](https://pola-rs.github.io/polars/py-polars/html/reference/dataframe/api/polars.DataFrame.pipe.html)\n",
+        "- [Extending the API](https://pola-rs.github.io/polars/py-polars/html/reference/api.html)"
       ]
     },
     {
@@ -484,7 +656,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -495,18 +667,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Cross-product of 209_388 rows would contain 43_843_334_544 rows.\n",
-            "Estimated size for the intermediate join result is 26.31 GB.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# fraction ist der Anteil an Zeilen und beeinflusst den Speicherbedarf\n",
         "# 0.003 ~ 4 GB (sollte mit 8 GB RAM laufen)\n",
@@ -533,37 +696,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div><style>\n",
-              ".dataframe > thead > tr > th,\n",
-              ".dataframe > tbody > tr > td {\n",
-              "  text-align: right;\n",
-              "  white-space: pre-wrap;\n",
-              "}\n",
-              "</style>\n",
-              "<small>shape: (1, 1)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>durationBetweenNewEntries</th></tr><tr><td>duration[ms]</td></tr></thead><tbody><tr><td>101d 5h 23m 10s 201ms</td></tr></tbody></table></div>"
-            ],
-            "text/plain": [
-              "shape: (1, 1)\n",
-              "┌───────────────────────────┐\n",
-              "│ durationBetweenNewEntries │\n",
-              "│ ---                       │\n",
-              "│ duration[ms]              │\n",
-              "╞═══════════════════════════╡\n",
-              "│ 101d 5h 23m 10s 201ms     │\n",
-              "└───────────────────────────┘"
-            ]
-          },
-          "execution_count": 4,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "# streaming=False \n",
         "high_mem_query.collect(streaming=False)"
@@ -579,11 +714,203 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Übungen"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "df = (\n",
+        "    pl.scan_parquet(\"spotify-charts-2017-2021.parquet\")\n",
+        "    .with_columns(pl.col(\"streams\").cast(pl.Int64))\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Frage 21"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "q21.question()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "q21_df = ..."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "q21.check(q21_df)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Frage 22"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "q22.question()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "q22_df = ..."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "q22.check(q22_df)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Frage 23"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "q23.question()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "q23_df = ..."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "q23.check(q23_df)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Frage 24"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "q24.question()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "q24_df = ..."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "q24.check(q24_df)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Frage 25"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "q25.question()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "region_df = pl.scan_csv(\"region-info.csv\")\n",
+        "xmasYears_per_continent = ...\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "q25_df = ..."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "q25.check(q25_df)"
+      ]
     }
   ],
   "metadata": {
