--- a/data2day_2023_Polars_Teil_3.ipynb
+++ b/data2day_2023_Polars_Teil_3.ipynb
@@ -250,6 +250,33 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "Wenn es nur darum geht bestimmte, einzelne Werte mit anderen zu ersetzen, kann auch `map_dict` sehr praktisch sein."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "mapping = {\n",
+        "    \"SAME_POSITION\": \"➡️\",\n",
+        "    \"NEW_ENTRY\": \"🆕\",\n",
+        "    \"MOVE_UP\": \"⬆️\",\n",
+        "    \"MOVE_DOWN\": \"⬇️\"\n",
+        "}\n",
+        "(df\n",
+        "  .with_columns(pl.col(\"trend\")\n",
+        "  .map_dict(mapping).alias(\"trendSymbol\"))\n",
+        "  .group_by(\"trendSymbol\")\n",
+        "  .count()\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## Custom Expressions"
       ]
     },
