--- a/data2day_2023_Polars_Part_1.ipynb
+++ b/data2day_2023_Polars_Part_1.ipynb
@@ -56,6 +56,7 @@
       },
       "outputs": [],
       "source": [
+        "# load requirements.txt with required libraries\n",
         "REQUIREMENTS_URL = \"https://github.com/bettercodepaul/data2day_2023_polars/raw/main/requirements.txt\"\n",
         "urllib.request.urlretrieve(REQUIREMENTS_URL, os.path.basename(REQUIREMENTS_URL))"
       ]
@@ -84,6 +85,7 @@
       },
       "outputs": [],
       "source": [
+        "# import polars\n",
         "import polars as pl"
       ]
     },
@@ -138,6 +140,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# import exercises and utility functions\n",
         "from data2day_exercises_en import *"
       ]
     },
@@ -291,7 +294,7 @@
         "id": "VwyfHvmI-VB4"
       },
       "source": [
-        "In order to get smaller numbers, we can specify, for example, the number of streams in base 1000."
+        "In order to get smaller numbers, we can specify, for example, the number of streams in thousands."
       ]
     },
     {
