--- a/data2day_2023_Polars_Teil_3.ipynb
+++ b/data2day_2023_Polars_Teil_3.ipynb
@@ -149,16 +149,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "%load_ext autoreload\n",
-        "%autoreload 2"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
         "from data2day_exercises import *"
       ]
     },
@@ -727,8 +717,15 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# streaming=False \n",
+        "# probiere unterschiedliche Werte für \"fraction\" mit streaming=False und streaming=True\n",
         "high_mem_query.collect(streaming=False)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Wenn eine Abfrage im Streaming-Modus ausgeführt werden kann, befindet sie sich innerhalb eines \"Pipeline\"-Knotens. Wenn einige Knoten nicht gestreamt werden können, werden sie außerhalb des \"Pipeline\"-Knotens angezeigt."
       ]
     },
     {
