--- a/data2day_2023_Polars_Teil_1.ipynb
+++ b/data2day_2023_Polars_Teil_1.ipynb
@@ -20,7 +20,7 @@
         "\n",
         "- Homepage von Polars: https://www.pola.rs/\n",
         "- User-Guide: https://pola-rs.github.io/polars/user-guide/\n",
-        "- API-Referenz: https://pola-rs.github.io/polars/py-polars/html/reference/"
+        "- API-Referenz: https://pola-rs.github.io/polars/py-polars/html/reference\n"
       ]
     },
     {
@@ -34,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "MJ39jUfNjscb"
       },
@@ -56,6 +56,7 @@
       },
       "outputs": [],
       "source": [
+        "# requirements.txt mit benötigten Bibliotheken laden\n",
         "REQUIREMENTS_URL = \"https://github.com/bettercodepaul/data2day_2023_polars/raw/main/requirements.txt\"\n",
         "urllib.request.urlretrieve(REQUIREMENTS_URL, os.path.basename(REQUIREMENTS_URL))"
       ]
@@ -78,12 +79,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "aeCD6DDzkGYC"
       },
       "outputs": [],
       "source": [
+        "# Polars importieren\n",
         "import polars as pl"
       ]
     },
@@ -138,6 +140,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# Übungen und Hilfsfunktionen importieren\n",
         "from data2day_exercises import *"
       ]
     },
@@ -291,7 +294,7 @@
         "id": "VwyfHvmI-VB4"
       },
       "source": [
-        "Damit wir kleinere Zahlen erhalten, können wir z.B. die Anzahl der Streams zur Basis 1000 angeben."
+        "Damit wir kleinere Zahlen erhalten, können wir z.B. die Anzahl der Streams in Tausenden angeben."
       ]
     },
     {
