suffix=name.suffix and prefix=name.prefix

--- a/data2day_2023_Polars_Teil_1.ipynb
+++ b/data2day_2023_Polars_Teil_1.ipynb
@@ -415,7 +415,7 @@
         "Bis jetzt haben wir keine Spalten hinzugefügt. Eine neue Spalte entsteht, wenn wir einen Namen angeben, der bisher noch nicht existiert. Wir können dafür folgende Methoden verwenden:\n",
         "\n",
         "- `alias` für einen vollständig neuen Namen\n",
-        "- `prefix`/`suffix` um den bestehenden Namen um ein Prefix/Suffix zu ergänzen"
+        "- `name.prefix`/`name.suffix` um den bestehenden Namen um ein Prefix/Suffix zu ergänzen"
       ]
     },
     {
@@ -432,7 +432,7 @@
       "outputs": [],
       "source": [
         "# Track-ID aus der URL extrahieren\n",
-        "df.select(\"title\", \"url\").with_columns(pl.col(\"url\").str.slice(len(\"https://open.spotify.com/track/\")).alias(\"trackId\"), pl.col(\"title\").str.to_uppercase().suffix(\"_uppercase\")).head(2)"
+        "df.select(\"title\", \"url\").with_columns(pl.col(\"url\").str.slice(len(\"https://open.spotify.com/track/\")).alias(\"trackId\"), pl.col(\"title\").str.to_uppercase().name.suffix(\"_uppercase\")).head(2)"
       ]
     },
     {
@@ -461,7 +461,7 @@
         "  .select(\"title\", \"url\")\n",
         "  .with_columns(\n",
         "    pl.col(\"url\").str.slice(len(\"https://open.spotify.com/track/\")).alias(\"trackId\"),\n",
-        "    pl.col(\"title\").str.to_uppercase().suffix(\"_uppercase\")\n",
+        "    pl.col(\"title\").str.to_uppercase().name.suffix(\"_uppercase\")\n",
         "  )\n",
         "  .head(2)\n",
         ")"
@@ -481,7 +481,7 @@
       "outputs": [],
       "source": [
         "# Zeitraum bestimmen, für den Daten vorliegen\n",
-        "df.select(pl.col(\"date\").min().suffix(\"_min\"), pl.col(\"date\").max().suffix(\"_max\"))"
+        "df.select(pl.col(\"date\").min().name.suffix(\"_min\"), pl.col(\"date\").max().name.suffix(\"_max\"))"
       ]
     },
     {
