--- a/data2day_2023_Polars_Part_1.ipynb
+++ b/data2day_2023_Polars_Part_1.ipynb
@@ -415,7 +415,7 @@
         "So far we have not added any columns. A new column will be created if we specify a name that does not exist yet. We can use the following methods for this:\n",
         "\n",
         "- `alias` for a completely new name\n",
-        "- `prefix`/`suffix` to add a prefix/suffix to the existing name"
+        "- `name.prefix`/`name.suffix` to add a prefix/suffix to the existing name"
       ]
     },
     {
@@ -432,7 +432,7 @@
       "outputs": [],
       "source": [
         "# Extract trackId from the URL\n",
-        "df.select(\"title\", \"url\").with_columns(pl.col(\"url\").str.slice(len(\"https://open.spotify.com/track/\")).alias(\"trackId\"), pl.col(\"title\").str.to_uppercase().suffix(\"_uppercase\")).head(2)"
+        "df.select(\"title\", \"url\").with_columns(pl.col(\"url\").str.slice(len(\"https://open.spotify.com/track/\")).alias(\"trackId\"), pl.col(\"title\").str.to_uppercase().name.suffix(\"_uppercase\")).head(2)"
       ]
     },
     {
@@ -461,7 +461,7 @@
         "  .select(\"title\", \"url\")\n",
         "  .with_columns(\n",
         "    pl.col(\"url\").str.slice(len(\"https://open.spotify.com/track/\")).alias(\"trackId\"),\n",
-        "    pl.col(\"title\").str.to_uppercase().suffix(\"_uppercase\")\n",
+        "    pl.col(\"title\").str.to_uppercase().name.suffix(\"_uppercase\")\n",
         "  )\n",
         "  .head(2)\n",
         ")"
@@ -481,7 +481,7 @@
       "outputs": [],
       "source": [
         "# Determine period for which data is available\n",
-        "df.select(pl.col(\"date\").min().suffix(\"_min\"), pl.col(\"date\").max().suffix(\"_max\"))"
+        "df.select(pl.col(\"date\").min().name.suffix(\"_min\"), pl.col(\"date\").max().name.suffix(\"_max\"))"
       ]
     },
     {
@@ -1607,7 +1607,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.11"
+      "version": "3.10.13"
     }
   },
   "nbformat": 4,
